--- a/origin-rest-neo4j-prototype2/src/main/resources/templates/index2.html
+++ b/origin-rest-neo4j-prototype2/src/main/resources/templates/index2.html
@@ -2,12 +2,10 @@
 <html>
 	<head>
 	<title>JRMDS</title>
-	<link rel="stylesheet" type="text/css" href="../style/style.css">
 	
-	<link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
-	<link href="http://fonts.googleapis.com/css?family=Oleo+Script" rel="stylesheet" type="text/css">
-	<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-	<meta charset="utf-8">
+	<link href="../static/style/style.css"
+          th:href="@{/style/style.css}"
+          rel="stylesheet" media="screen" />
 	</head>
 	
 	
@@ -15,39 +13,12 @@
 		
 		
 		<div id="main">
-		<div id="header_wrapper">
-			<div id="header">
-				<a href="index.html"><img id="header_logo" src="../img/logo.png" alt="logo"/></a>
-				
-				<form id="search" action="./searchResults.html">
-				 <input id="search_input" type="text" value="Suchen auf JRMDS"  onfocus="(this.value == 'Suchen auf JRMDS') && (this.value = ''); this.style.color='black';" onblur="(this.value == '') && (this.value = 'Suchen auf JRMDS'); this.style.color='#d6d6d6';" />
-				 <input type="submit" id="search_button" value="">
-				 <select name="searchoption">
-					  <option selected>alle</option>
-					  <option>Gruppe</option>
-					  <option>Constrain</option>
-					  <option>Concept</option>
-					  <option>Template</option>
-				</select>
-				</form>
-				 
-				 <div id="welcome_user">
-					<a href="./projects.html"><img src="../img/projects.png" alt="Projekte" class="symbol_small"/>Projekte</a>
-					<a href="./usermanagement.html"><img src="../img/user.png" alt="Projekte" class="symbol_small"/>User01</a>
 
-					
-				 </div>
-				
-				<div style="clear:both;">
-				</div>
-				
-			</div>
-		</div>
 		<div id="content_wrapper">
 		
 			<div class="container">
 				<div class="container_heading">
-				Demo-Inhalt 1
+				Demo-Inhalt 1  ÖÄÖÄÖÄö
 				</div>
 				
 				<div class="actual_content">
@@ -56,10 +27,33 @@
 						<h4>Login erfolgreich</h4>
 						<div class="error_content">
 						Willkommen im JRMDS
-						</br>
 						Huhu User01
 						</div>
 					</div>
+					
+					        <form action="#" th:action="@{/hello}" th:object="${person}" method="post">
+            <table>
+                <tr>
+                    <td>Firstame:</td>
+                    <td><input type="text" th:field="*{name}" /></td>
+                    <td th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name Error</td>
+                </tr>
+                 <tr>
+                    <td>Lastname:</td>
+                    <td><input type="text" th:field="*{lastname}" /></td>
+                    <td th:if="${#fields.hasErrors('lastname')}" th:errors="*{lastname}">Name Error</td>
+                </tr>
+                <tr>
+                    <td>Age:</td>
+                    <td><input type="text" th:field="*{age}" /></td>
+                    <td th:if="${#fields.hasErrors('age')}" th:errors="*{age}">Name Error</td>
+                </tr>
+                <tr>
+                    <td><button type="submit">Submit</button></td>
+                </tr>
+            </table>
+        </form>
+					
 					
 				</div>
 
