--- a/origin-rest-neo4j-prototype2/src/main/resources/static/style/style.css
+++ b/origin-rest-neo4j-prototype2/src/main/resources/static/style/style.css
@@ -511,6 +511,6 @@ table > tr > td.width200{
 	
 	
 .autocomplete-suggestions { border: 1px solid #999; background: #FFF; overflow: auto; }
-.autocomplete-suggestion { padding: 5px 5px; white-space: nowrap; overflow: hidden; font-size:22px}
+.autocomplete-suggestion { padding: 5px 5px; white-space: nowrap; overflow: hidden; font-size:14px}
 .autocomplete-selected { background: #F0F0F0; }
-.autocomplete-suggestions strong { font-weight: bold; color: #3399FF; }	
+.autocomplete-suggestions strong {  color: #3399FF; }	
