--- a/origin-rest-neo4j-prototype2/src/main/resources/templates/start.html
+++ b/origin-rest-neo4j-prototype2/src/main/resources/templates/start.html
@@ -1,7 +1,8 @@
-<!doctype html>
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+
 <title>JRMDS</title>
 <link th:href="@{http://fonts.googleapis.com/css(family=Lato)}" rel="stylesheet" type="text/css" />
 <link th:href="@{http://fonts.googleapis.com/css(family=Oleo+Script)}" rel="stylesheet" type="text/css" />
@@ -10,13 +11,15 @@
 <script type="text/javascript" th:src="@{https://code.jquery.com/jquery-2.1.1.min.js}"></script>
 <script type="text/javascript" th:src="@{/js/jquery.autocomplete.js}"></script>
 
-
 </head>
+
 
 <body>
 
 
 	<div id="main">
+
+
 		<div id="header_wrapper">
 			<div id="header">
 				<a th:href="@{/}"><img id="header_logo" th:src="@{/img/logo.png}" alt="logo" /></a>
@@ -35,15 +38,17 @@
 				</form>
 
 				<div id="welcome_user">
-					<a th:href="@{hello}"><img th:src="@{/img/projects.png}" alt="Projekte" class="symbol_small" />Projekte</a> 
-					<a th:href="@{hello}"><img th:src="@{/img/user.png}" alt="Projekte" class="symbol_small" />Login</a> 
-					<a th:href="@{hello}"><img th:src="@{/img/user.png}"  alt="Projekte" class="symbol_small" />Register</a>
+					<a th:href="@{hello}"><img th:src="@{/img/projects.png}" alt="Projekte" class="symbol_small" />Projekte</a> <a th:href="@{hello}"><img
+						th:src="@{/img/user.png}" alt="Projekte" class="symbol_small" />Login</a> <a th:href="@{hello}"><img th:src="@{/img/user.png}"
+						alt="Projekte" class="symbol_small" />Register</a>
 				</div>
 
 				<div style="clear: both;"></div>
 
 			</div>
 		</div>
+
+
 		<div id="content_wrapper">
 
 			<div class="container">
@@ -52,9 +57,35 @@
 				<div class="actual_content">
 
 					<div class="error_message">
-						<h4>Hallo Gast</h4>
-						<div class="error_content">Einloggen um auch etwas ändern zu können Sonst kannste nur lesen hier.</div>
+						<h4>Login erfolgreich</h4>
+						<div class="error_content">Willkommen im JRMDS Huhu User01</div>
 					</div>
+
+					<form th:action="@{/addPerson}" th:object="${person}" method="post">
+						<table>
+							<tr>
+								<td>Firstame:</td>
+								<td><input type="text" th:field="*{name}" /></td>
+								<td th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name Error</td>
+							</tr>
+							<tr>
+								<td>Lastname:</td>
+								<td><input type="text" th:field="*{lastname}" /></td>
+								<td th:if="${#fields.hasErrors('lastname')}" th:errors="*{lastname}">Name Error</td>
+							</tr>
+							<tr>
+								<td>Age:</td>
+								<td><input type="text" th:field="*{age}" /></td>
+								<td th:if="${#fields.hasErrors('age')}" th:errors="*{age}">Name Error</td>
+							</tr>
+							<tr>
+								<td><button type="submit">Submit</button></td>
+							</tr>
+						</table>
+					</form>
+
+					<a th:href="@{start}">Start</a>
+					<a th:href="@{projectOverview}">Projekt-übersicht</a>
 
 				</div>
 
@@ -64,10 +95,6 @@
 
 		<div id="footer"></div>
 	</div>
-
-
-
-
 
 
 
