FIRST UPDATE TO HMTL PAGES... NO FULL TL SUPPORT YET

--- a/origin-rest-neo4j-prototype2/src/main/resources/templates/index.html
+++ b/origin-rest-neo4j-prototype2/src/main/resources/templates/index.html
@@ -17,33 +17,7 @@
 
 
 	<div id="main">
-		<div id="header_wrapper">
-			<div id="header">
-				<a th:href="@{/}"><img id="header_logo" th:src="@{/img/logo.png}" alt="logo" /></a>
-
-				<form id="search" action="#" th:action="@{hello}" method="post" name="search">
-					<input id="search_input" type="text" value="Suchen auf JRMDS" name="search_input" />
-					<script th:src="@{/js/searchbarFunctions.js}"></script>
-					<button type="submit" id="search_button"></button>
-					<select name="searchoption">
-						<option>alle</option>
-						<option>Gruppe</option>
-						<option>Constrain</option>
-						<option>Concept</option>
-						<option>Template</option>
-					</select>
-				</form>
-
-				<div id="welcome_user">
-					<a th:href="@{hello}"><img th:src="@{/img/projects.png}" alt="Projekte" class="symbol_small" />Projekte</a> 
-					<a th:href="@{hello}"><img th:src="@{/img/user.png}" alt="Projekte" class="symbol_small" />Login</a> 
-					<a th:href="@{hello}"><img th:src="@{/img/user.png}"  alt="Projekte" class="symbol_small" />Register</a>
-				</div>
-
-				<div style="clear: both;"></div>
-
-			</div>
-		</div>
+		<div id="header_wrapper" th:replace="fragments/header :: header"></div>
 		<div id="content_wrapper">
 
 			<div class="container">
@@ -64,12 +38,6 @@
 
 		<div id="footer"></div>
 	</div>
-
-
-
-
-
-
 
 </body>
 
