--- a/origin-rest-neo4j-prototype2/src/main/resources/templates/editGroup.html
+++ b/origin-rest-neo4j-prototype2/src/main/resources/templates/editGroup.html
@@ -1,89 +1,100 @@
 <!doctype html>
-<html>
-	<head>
-	<title>JRMDS</title>
-	<link rel="stylesheet" type="text/css" href="../style/style.css">
-	
-	<link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
-	<link href="http://fonts.googleapis.com/css?family=Oleo+Script" rel="stylesheet" type="text/css">
-	<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-	<meta charset="utf-8">
-	</head>
-	
-	
-	<body>
-		
-		
-		<div id="main">
-		<div id="header_wrapper">
-			<div id="header">
-				<a href="index.html"><img id="header_logo" src="../img/logo.png" alt="logo"/></a>
-				
-				<form id="search" action="./searchResults.html">
-				 <input id="search_input" type="text" value="Search in Project001"  onfocus="(this.value == 'Suchen auf JRMDS') && (this.value = ''); this.style.color='black';" onblur="(this.value == '') && (this.value = 'Suchen auf JRMDS'); this.style.color='#d6d6d6';" />
-				 <input type="submit" id="search_button" value="">
-				 <select name="searchoption">
-					  <option selected>alle</option>
-					  <option>Gruppe</option>
-					  <option>Constrain</option>
-					  <option>Concept</option>
-					  <option>Template</option>
-				 </select>
-				</form>
-				 
-				 <div id="welcome_user">
-					<a href="./projects.html"><img src="../img/projects.png" alt="Projekte" class="symbol_small"/>Projekte</a>
-					<a href="./usermanagement.html"><img src="../img/user.png" alt="Projekte" class="symbol_small"/>swt14w01</a>
-					
-					<a href="./index.html"><img src="../img/log_out.png" alt="LogOut" class="symbol_small"/></a>
-				 </div>
-				
-				<div style="clear:both;">
-				</div>
-				
-			</div>
-		</div>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>JRMDS</title>
+<link th:href="@{http://fonts.googleapis.com/css(family=Lato)}" rel="stylesheet" type="text/css" />
+<link th:href="@{http://fonts.googleapis.com/css(family=Oleo+Script)}" rel="stylesheet" type="text/css" />
+<link th:href="@{http://fonts.googleapis.com/css(family=Roboto)}" rel="stylesheet" type="text/css" />
+<link th:href="@{/style/style.css}" rel="stylesheet" media="screen" type="text/css" />
+<script type="text/javascript" th:src="@{https://code.jquery.com/jquery-2.1.1.min.js}"></script>
+<script type="text/javascript" th:src="@{/js/jquery.autocomplete.js}"></script>
+
+
+</head>
+
+
+<body>
+
+
+	<div id="main">
+		<div id="header_wrapper" th:replace="fragments/header :: header"></div>
 		<div id="content_wrapper">
-		
+
 			<div class="container">
 				<div class="container_heading">SlowCheck (Group)</div>
-				
+
 				<div class="actual_content">
-					<table style="width:95%"><tr>
-						<td><span>ID:</span></td><td><input type="text" size="60"></td>
-					</tr></table><br><br>
-					<br><br><br>
-					<strong>References:</strong><br><br>
-					<span>Includes:</span><form action="confirmRefDelete.html">
-					<table style="width:75%"><tr>
-						<td>1<td><a href="./editGroup1.html">FastCheck</a></td><td> </td><td><input type="checkbox"></td>
-					</tr><tr>
-						<td>2<td><a href="./editRule.html">Constraint modules:UndefinedModules</a></td><td>Severity: <input type="text" size="15"></td><td><input type="checkbox"></td>
-					</tr><tr>
-						<td>3<td><a href="./editRule1.html">another Concept</a></td><td>Severity: <input type="text" size="15"></td><td><input type="checkbox"></td>
-					</tr><tr>
-						<td> </td><td> </td><td> </td><td><input type="submit" value="delete"></form></td>
-					</tr><tr>
-						<td> </td><td><form action="./errorRefAdd.html"><input type="text" size="50"><input type="submit" value="Add"></form></td><td></td>
-					</tr></table>
-					<br><br>
-					<span>Referenced by:</span>
-					<p><form action="./confirmRuleDel.html">Element not referenced. Click to delete: <input type="Submit" value="Delete this"></form></p>
-					<p><form action="./projectOverview.html">
-					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-					Save all changes <input type="submit" value="save"> or discard <input type="submit" value="cancel"></form></p>
+					<table style="width: 95%">
+						<tr>
+							<td><span>ID:</span></td>
+							<td><input type="text" size="60"></td>
+						</tr>
+					</table>
+					<br>
+					<br> <br>
+					<br>
+					<br> <strong>References:</strong><br>
+					<br> <span>Includes:</span>
+					<form action="confirmRefDelete.html">
+						<table style="width: 75%">
+							<tr>
+								<td>1
+								<td><a href="./editGroup1.html">FastCheck</a></td>
+								<td></td>
+								<td><input type="checkbox"></td>
+							</tr>
+							<tr>
+								<td>2
+								<td><a href="./editRule.html">Constraint modules:UndefinedModules</a></td>
+								<td>Severity: <input type="text" size="15"></td>
+								<td><input type="checkbox"></td>
+							</tr>
+							<tr>
+								<td>3
+								<td><a href="./editRule1.html">another Concept</a></td>
+								<td>Severity: <input type="text" size="15"></td>
+								<td><input type="checkbox"></td>
+							</tr>
+							<tr>
+								<td></td>
+								<td></td>
+								<td></td>
+								<td><input type="submit" value="delete">
+								</form></td>
+							</tr>
+							<tr>
+								<td></td>
+								<td><form action="./errorRefAdd.html">
+										<input type="text" size="50"><input type="submit" value="Add">
+									</form></td>
+								<td></td>
+							</tr>
+						</table>
+						<br>
+						<br> <span>Referenced by:</span>
+						<p>
+						<form action="./confirmRuleDel.html">
+							Element not referenced. Click to delete: <input type="Submit" value="Delete this">
+						</form>
+						</p>
+						<p>
+						<form action="./projectOverview.html">
+							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+							Save all changes <input type="submit" value="save"> or discard <input type="submit" value="cancel">
+						</form>
+						</p>
 				</div>
 
 			</div>
-		
+
 		</div>
-		
-		<div id="footer">
-		</div>
-		</div>
-		
-		
-		
-	</body>
-	
-	</html>
+
+		<div id="footer"></div>
+	</div>
+
+
+
+</body>
+
+</html>
