--- a/origin-rest-neo4j-prototype2/src/main/resources/templates/editTemplate.html
+++ b/origin-rest-neo4j-prototype2/src/main/resources/templates/editTemplate.html
@@ -1,127 +1,127 @@
 <!doctype html>
-<html>
-	<head>
-	<title>JRMDS</title>
-	<link rel="stylesheet" type="text/css" href="../style/style.css">
-	
-	<link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
-	<link href="http://fonts.googleapis.com/css?family=Oleo+Script" rel="stylesheet" type="text/css">
-	<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-	<meta charset="utf-8">
-	</head>
-	
-	
-	<body>
-		
-		
-		<div id="main">
-		<div id="header_wrapper">
-			<div id="header">
-				<a href="index.html"><img id="header_logo" src="../img/logo.png" alt="logo"/></a>
-				
-				<form id="search" action="./searchResults.html">
-				 <input id="search_input" type="text" value="Suchen auf JRMDS"  onfocus="(this.value == 'Suchen auf JRMDS') && (this.value = ''); this.style.color='black';" onblur="(this.value == '') && (this.value = 'Suchen auf JRMDS'); this.style.color='#d6d6d6';" />
-				 <input type="submit" id="search_button" value="">
-				 <select name="searchoption">
-					  <option selected>alle</option>
-					  <option>Gruppe</option>
-					  <option>Constrain</option>
-					  <option>Concept</option>
-					  <option>Template</option>
-				</select>
-				</form>
-				 
-				 <div id="welcome_user">
-					<a href="./projects.html"><img src="../img/projects.png" alt="Projekte" class="symbol_small"/>Projekte</a>
-					<a href="./usermanagement.html"><img src="../img/user.png" alt="Projekte" class="symbol_small"/>swt14w01</a>
-					
-					<a href="./index.html"><img src="../img/log_out.png" alt="LogOut" class="symbol_small"/></a>
-				 </div>
-				
-				<div style="clear:both;">
-				</div>
-				
-			</div>
-		</div>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>JRMDS</title>
+<link th:href="@{http://fonts.googleapis.com/css(family=Lato)}" rel="stylesheet" type="text/css" />
+<link th:href="@{http://fonts.googleapis.com/css(family=Oleo+Script)}" rel="stylesheet" type="text/css" />
+<link th:href="@{http://fonts.googleapis.com/css(family=Roboto)}" rel="stylesheet" type="text/css" />
+<link th:href="@{/style/style.css}" rel="stylesheet" media="screen" type="text/css" />
+<script type="text/javascript" th:src="@{https://code.jquery.com/jquery-2.1.1.min.js}"></script>
+<script type="text/javascript" th:src="@{/js/jquery.autocomplete.js}"></script>
+
+
+</head>
+
+
+<body>
+
+
+	<div id="main">
+		<div id="header_wrapper" th:replace="fragments/header :: header"></div>
 		<div id="content_wrapper">
-		
+
 			<div class="container">
-				<div class="container_heading">
-			Template editieren
-				</div>
-				
+				<div class="container_heading">Template editieren</div>
+
 				<div class="actual_content">
-				
+
 					<form id="EditTemplate">
-					<table style="width:95%"><tr>
-						<td><span>ID:</span></td><td><input type="text" size="60"></td>
-					</tr><tr>
-						<td><span>Description:</span></td><td><textarea rows="2" cols="60"></textarea></td>
-					</tr><tr>
-						<td><span>Cypher:</span></td><td><textarea rows="4" cols="60"></textarea></td>
-					</tr></table><br><br>
-					
-					<strong>Parameters:</strong><br>
-					<table ><tr>
-						<td>#</td><td>Integer?</td><td>Name</td><td>Value</td>
-					</tr><td>1</td><td><input type="checkbox"></td><td><input type="text" size="40"></td><td><input type="text" size="40"></td>
-					</tr><tr>
-						<td>2</td><td><input type="checkbox"></td><td><input type="text" size="40"></td><td><input type="text" size="40"></td>
-					</tr>
-  					<TR><TD colspan="4"><input type="button" value="-" onClick="minus();">
-					  <input type="button" value="+" onClick="plus();"></TD></TR>
-  					<TR><TD colspan="4">	
-					 <div id="dynamisch" width="100%"> 
-					  </div>
-					  </TD></TR>
-					</Table>
-					 <input type="reset" value="Reset"><input type="button" name="delete" value="Löschen" onClick="return confirmDelete();"><input type="button" name="abort" value="Abbrechen" onClick="return redirectToIndex();"/></form><form action="./index.html"><input type="submit" name ="submit" value="Speichern"></form>
-					
-				  	
-				  	 <script>
-				
-				  var feld = 3;
+						<table style="width: 95%">
+							<tr>
+								<td><span>ID:</span></td>
+								<td><input type="text" size="60"></td>
+							</tr>
+							<tr>
+								<td><span>Description:</span></td>
+								<td><textarea rows="2" cols="60"></textarea></td>
+							</tr>
+							<tr>
+								<td><span>Cypher:</span></td>
+								<td><textarea rows="4" cols="60"></textarea></td>
+							</tr>
+						</table>
+						<br>
+						<br> <strong>Parameters:</strong><br>
+						<table>
+							<tr>
+								<td>#</td>
+								<td>Integer?</td>
+								<td>Name</td>
+								<td>Value</td>
+							</tr>
+							<td>1</td>
+							<td><input type="checkbox"></td>
+							<td><input type="text" size="40"></td>
+							<td><input type="text" size="40"></td>
+							</tr>
+							<tr>
+								<td>2</td>
+								<td><input type="checkbox"></td>
+								<td><input type="text" size="40"></td>
+								<td><input type="text" size="40"></td>
+							</tr>
+							<TR>
+								<TD colspan="4"><input type="button" value="-" onClick="minus();"> <input type="button" value="+" onClick="plus();"></TD>
+							</TR>
+							<TR>
+								<TD colspan="4">
+									<div id="dynamisch" width="100%"></div>
+								</TD>
+							</TR>
+						</Table>
+						<input type="reset" value="Reset"><input type="button" name="delete" value="Löschen" onClick="return confirmDelete();"><input
+							type="button" name="abort" value="Abbrechen" onClick="return redirectToIndex();" />
+					</form>
+					<form action="./index.html">
+						<input type="submit" name="submit" value="Speichern">
+					</form>
 
-					  function plus() {
-					   if (feld <= 7) {
-					    document.getElementById("dynamisch").innerHTML +=
-					    "<Table border=0><TR><td>"+feld+"</td><td width='45'><input type='checkbox' ></td><td><input type='text' size='40'></td><td><input type='text' size='40'></td></tr></table>";
-					    feld++;
-					   }
-					  }
 
-					  function minus() {
-					   if (feld > 3) {
-					    feld--;
-					    document.getElementById("dynamisch").innerHTML = "";
-					    for (var zaehler = 3; zaehler < feld; zaehler++) {
-					      document.getElementById("dynamisch").innerHTML +=
-					    	  "<Table border=0><TR><td>"+zaehler+"</td><td width='45'><input type='checkbox' ></td><td><input type='text' size='40'></td><td><input type='text' size='40'></td></tr></table>";
-							 }
-					   }
-					  }
-					  
-					  function confirmDelete(){
-					    window.location ="./confirmTemplateDelete.html"	 
-					  	 }
-					  
-					  function  redirectToIndex(){
-						window.location = "./index.html";  
-						
-					  }
-					  </script>
+					<script>
+						var feld = 3;
+
+						function plus() {
+							if (feld <= 7) {
+								document.getElementById("dynamisch").innerHTML += "<Table border=0><TR><td>"
+										+ feld
+										+ "</td><td width='45'><input type='checkbox' ></td><td><input type='text' size='40'></td><td><input type='text' size='40'></td></tr></table>";
+								feld++;
+							}
+						}
+
+						function minus() {
+							if (feld > 3) {
+								feld--;
+								document.getElementById("dynamisch").innerHTML = "";
+								for (var zaehler = 3; zaehler < feld; zaehler++) {
+									document.getElementById("dynamisch").innerHTML += "<Table border=0><TR><td>"
+											+ zaehler
+											+ "</td><td width='45'><input type='checkbox' ></td><td><input type='text' size='40'></td><td><input type='text' size='40'></td></tr></table>";
+								}
+							}
+						}
+
+						function confirmDelete() {
+							window.location = "./confirmTemplateDelete.html"
+						}
+
+						function redirectToIndex() {
+							window.location = "./index.html";
+
+						}
+					</script>
 				</div>
 
 			</div>
-		
+
 		</div>
-		
-		<div id="footer">
-		</div>
-		</div>
-		
-		
-		
-	</body>
-	
-	</html>
+
+		<div id="footer"></div>
+	</div>
+
+
+
+</body>
+
+</html>
