all templates are THYMELEAF VALID.

--- a/origin-rest-neo4j-prototype2/src/main/resources/templates/confirmParameterDelete.html
+++ b/origin-rest-neo4j-prototype2/src/main/resources/templates/confirmParameterDelete.html
@@ -25,8 +25,8 @@
 			<div class="error_message">
 				<h4>Wollen sie die folgenden Parameter wirklich löschen?</h4>
 				<div class="error_content">
-					<span>ParameterName1 (Value:xyz)</span><br> <span>ParameterName2 (Value:1234)</span><br> <input type="submit" value="jo"
-						onClick="window.history.back();return false;"> <input type="submit" value="nö" onClick="window.history.back();return false;">
+					<span>ParameterName1 (Value:xyz)</span> <span>ParameterName2 (Value:1234)</span> <input type="submit" th:value="jo" /> <input
+						type="submit" th:value="nö" />
 				</div>
 			</div>
 
