--- a/origin-rest-neo4j-prototype2/src/main/resources/templates/confirmTemplateDelete.html
+++ b/origin-rest-neo4j-prototype2/src/main/resources/templates/confirmTemplateDelete.html
@@ -25,10 +25,9 @@
 			<div class="error_message">
 				<h4>Deletion of Template</h4>
 				<div class="error_content">
-					The following Rules are still linked to this template!!<br> <a href="./editRule1.html">Concept xy</a><br> <a
-						href="./editRule.html">another Concept</a><br> <br>Confirm deletion, rules could get unusable due to this act of valor!<br>
-					<input type="submit" value="jo" onClick="window.history.back();return false;"> <input type="submit" value="nö"
-						onClick="window.history.back();return false;">
+					The following Rules are still linked to this template!! <a th:href="@{editRule1}">Concept xy</a> 
+					<a th:href="@{editRule}">another Concept</a> Confirm deletion, rules could get unusable due to this act of valor!
+					<input type="submit" value="jo"/> <input type="submit" value="nö"/>
 				</div>
 			</div>
 
