--- a/origin-rest-neo4j-prototype2/src/main/resources/templates/editGroup.html
+++ b/origin-rest-neo4j-prototype2/src/main/resources/templates/editGroup.html
@@ -28,61 +28,60 @@
 					<table style="width: 95%">
 						<tr>
 							<td><span>ID:</span></td>
-							<td><input type="text" size="60"></td>
+							<td><input type="text" size="60"/></td>
 						</tr>
 					</table>
-					<br>
-					<br> <br>
-					<br>
-					<br> <strong>References:</strong><br>
-					<br> <span>Includes:</span>
-					<form action="confirmRefDelete.html">
+					
+					 
+					
+					 <strong>References:</strong>
+					 <span>Includes:</span>
+					<!-- <form th:action="@{confirmRefDelete}">-->
 						<table style="width: 75%">
 							<tr>
-								<td>1
-								<td><a href="./editGroup1.html">FastCheck</a></td>
+								<td>1</td>
+								<td><a th:href="@{editGroup1}">FastCheck</a></td>
 								<td></td>
-								<td><input type="checkbox"></td>
+								<td><input type="checkbox"/></td>
 							</tr>
 							<tr>
-								<td>2
-								<td><a href="./editRule.html">Constraint modules:UndefinedModules</a></td>
-								<td>Severity: <input type="text" size="15"></td>
-								<td><input type="checkbox"></td>
+								<td>2</td>
+								<td><a th:href="@{editRule}">Constraint modules:UndefinedModules</a></td>
+								<td>Severity: <input type="text" size="15"/></td>
+								<td><input type="checkbox"/></td>
 							</tr>
 							<tr>
-								<td>3
-								<td><a href="./editRule1.html">another Concept</a></td>
-								<td>Severity: <input type="text" size="15"></td>
-								<td><input type="checkbox"></td>
-							</tr>
-							<tr>
-								<td></td>
-								<td></td>
-								<td></td>
-								<td><input type="submit" value="delete">
-								</form></td>
+								<td>3</td>
+								<td><a th:href="@{editRule1}">another Concept</a></td>
+								<td>Severity: <input type="text" size="15"/></td>
+								<td><input type="checkbox"/></td>
 							</tr>
 							<tr>
 								<td></td>
-								<td><form action="./errorRefAdd.html">
-										<input type="text" size="50"><input type="submit" value="Add">
+								<td></td>
+								<td></td>
+								<td><input type="submit" value="delete"/>
+								</td>
+							</tr>
+							<tr>
+								<td></td>
+								<td><form th:action="@{errorRefAdd}">
+										<input type="text" size="50"/><input type="submit" value="Add"/>
 									</form></td>
 								<td></td>
 							</tr>
 						</table>
-						<br>
-						<br> <span>Referenced by:</span>
+						
+						 <span>Referenced by:</span>
 						<p>
-						<form action="./confirmRuleDel.html">
-							Element not referenced. Click to delete: <input type="Submit" value="Delete this">
-						</form>
+						<!-- <form th:action="@{confirmRuleDel}">-->
+							Element not referenced. Click to delete: <input type="Submit" value="Delete this"/>
+						<!--  </form>-->
 						</p>
 						<p>
-						<form action="./projectOverview.html">
-							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-							Save all changes <input type="submit" value="save"> or discard <input type="submit" value="cancel">
-						</form>
+						<!-- <form th:action="@{projectOverview}">-->
+							Save all changes <input type="submit" value="save"/> or discard <input type="submit" value="cancel"/>
+						<!--  </form>-->
 						</p>
 				</div>
 
