--- a/origin-rest-neo4j-prototype2/src/main/resources/templates/editGroup1.html
+++ b/origin-rest-neo4j-prototype2/src/main/resources/templates/editGroup1.html
@@ -28,57 +28,44 @@
 					<table style="width: 95%">
 						<tr>
 							<td><span>ID:</span></td>
-							<td><input type="text" size="60"></td>
+							<td><input type="text" size="60" /></td>
 						</tr>
 					</table>
-					<br>
-					<br> <br>
-					<br>
-					<br> <strong>References:</strong><br>
-					<br> <span>Includes:</span>
+					<strong>References:</strong> <span>Includes:</span>
 					<table style="width: 75%">
-						<form action="confirmRefDelete.html">
-							<tr>
-								<td>1
-								<td><a href="./editRule.html">Constraint modules:UndefinedModules</a></td>
-								<td>Severity: <input type="text" size="15"></td>
-								<td><input type="checkbox"></td>
-							</tr>
-							<tr>
-								<td>2
-								<td><a href="./editRule1.html">another Concept</a></td>
-								<td>Severity: <input type="text" size="15"></td>
-								<td><input type="checkbox"></td>
-							</tr>
-							<tr>
-								<td></td>
-								<td></td>
-								<td></td>
-								<td><input type="Submit" value="delete">
-						</form>
-						</td>
+						<tr>
+							<td>1</td>
+							<td><a href="./editRule.html">Constraint modules:UndefinedModules</a></td>
+							<td>Severity: <input type="text" size="15" /></td>
+							<td><input type="checkbox" /></td>
+						</tr>
+						<tr>
+							<td>2</td>
+							<td><a href="./editRule1.html">another Concept</a></td>
+							<td>Severity: <input type="text" size="15" /></td>
+							<td><input type="checkbox" /></td>
 						</tr>
 						<tr>
 							<td></td>
-							<td><form action="./errorRefAdd.html">
-									<input type="text" size="50"><input type="Submit" value="Add">
-								</form></td>
+							<td></td>
+							<td></td>
+							<td><input type="Submit" value="delete" /></td>
+						</tr>
+						<tr>
+							<td></td>
+							<td><input type="text" size="50" /><input type="Submit" value="Add" /></td>
 							<td></td>
 						</tr>
 					</table>
-					<br>
-					<br> <span>Referenced by:</span>
+					<span>Referenced by:</span>
 					<table style="width: 75%">
 						<tr>
-							<td>1
-							<td><a href="./editGroup.html">SlowCheck</a></td>
+							<td>1</td>
+							<td><a href="editGroup.html">SlowCheck</a></td>
 						</tr>
 					</table>
 					<p>
-					<form action="./projectOverview.html">
-						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-						Save all changes <input type="submit" value="save"> or discard <input type="submit" value="cancel">
-					</form>
+						Save all changes <input type="submit" value="save" /> or discard <input type="submit" value="cancel" />
 					</p>
 				</div>
 
