--- a/origin-rest-neo4j-prototype2/src/main/resources/templates/errorRefAdd.html
+++ b/origin-rest-neo4j-prototype2/src/main/resources/templates/errorRefAdd.html
@@ -25,8 +25,8 @@
 			<div class="error_message">
 				<h4>Impossible!</h4>
 				<div class="error_content">
-					Adding this rule would create a cycle!.<br> <br>OR <br>Node-Name ambigious. An concept and constraint with the same ID
-					exist.<br> <br> <input type="submit" value="jo" onClick="window.history.back();return false;"> <input type="submit"
+					Adding this rule would create a cycle!. OR Node-Name ambigious. An concept and constraint with the same ID
+					exist.  <input type="submit" value="jo" onClick="window.history.back();return false;"> <input type="submit"
 						value="nö" onClick="window.history.back();return false;">
 				</div>
 			</div>
