--- a/origin-rest-neo4j-prototype2/src/main/resources/templates/login.html
+++ b/origin-rest-neo4j-prototype2/src/main/resources/templates/login.html
@@ -29,7 +29,7 @@
 						<form action="./index2.html">
 
 							<input class="formfield" placeholder="Username" /> <input class="formfield" placeholder="Password" /> <input type="submit"
-								id="submit_button" value="Submit">
+								id="submit_button" value="Submit" />
 
 						</form>
 					</div>
