--- a/origin-rest-neo4j-prototype2/src/main/resources/templates/projects.html
+++ b/origin-rest-neo4j-prototype2/src/main/resources/templates/projects.html
@@ -31,7 +31,7 @@
 								<div class="project">
 									<div>
 										<div class="projectname">
-											<a href="projectOverview.html">Projekt 1<span class="desc">Es grünt so grün, grünt so grün, grünt so grüngrün,
+											<a th:href="@{projectOverview}">Projekt 1<span class="desc">Es grünt so grün, grünt so grün, grünt so grüngrün,
 													grüntgrünt so grün, grünt so grüngrün, grünt so grün, grünt so grün, wenn Spaniens Blüten blühen</span></a>
 										</div>
 										<div class="projectleader">
@@ -40,7 +40,7 @@
 									</div>
 									<div>
 										<div class="projectname">
-											<a href="projectOverview.html">Projekt 2<span class="desc">Es grünt so grün, wenn Spaniens Blüten blühen</span></a>
+											<a th:href="@{projectOverview}">Projekt 2<span class="desc">Es grünt so grün, wenn Spaniens Blüten blühen</span></a>
 										</div>
 										<div class="projectleader">
 											<a href="userprofile.html">Dirk Mahler</a>
@@ -48,7 +48,7 @@
 									</div>
 									<div>
 										<div class="projectname">
-											<a href="projectOverview.html">Projekt 3<span class="desc">Es grünt so grün, wenn Spaniens Blüten blühen</span></a>
+											<a th:href="@{projectOverview}">Projekt 3<span class="desc">Es grünt so grün, wenn Spaniens Blüten blühen</span></a>
 										</div>
 										<div class="projectleader">
 											<a href="userprofile.html">Dirk Mahler Mahler Mahler</a>
@@ -56,7 +56,7 @@
 									</div>
 									<div>
 										<div class="projectname">
-											<a href="projectOverview.html">Projekt 4<span class="desc">Es grünt so grün, wenn Spaniens Blüten blühen</span></a>
+											<a th:href="@{projectOverview}">Projekt 4<span class="desc">Es grünt so grün, wenn Spaniens Blüten blühen</span></a>
 										</div>
 										<div class="projectleader">
 											<a href="userprofile.html">Dirk Mahler</a>
@@ -64,7 +64,7 @@
 									</div>
 									<div>
 										<div class="projectname">
-											<a href="projectOverview.html">Projekt 5<span class="desc">Es grünt so grün, wenn Spaniens Blüten blühen</span></a>
+											<a th:href="@{projectOverview}">Projekt 5<span class="desc">Es grünt so grün, wenn Spaniens Blüten blühen</span></a>
 										</div>
 										<div class="projectleader">
 											<a href="userprofile.html">Dirk Mahler</a>
