--- a/origin-rest-neo4j-prototype2/src/main/resources/templates/register.html
+++ b/origin-rest-neo4j-prototype2/src/main/resources/templates/register.html
@@ -30,7 +30,7 @@
 
 							<input class="formfield" placeholder="Username" /> <input class="formfield" placeholder="Password" /> <input class="formfield"
 								placeholder="Repeat Password" /> <input class="formfield" placeholder="Email Adress" /> <input type="submit" id="submit_button"
-								value="Submit">
+								value="Submit" />
 
 						</form>
 					</div>
