--- a/origin-rest-neo4j-prototype2/src/main/resources/templates/start.html
+++ b/origin-rest-neo4j-prototype2/src/main/resources/templates/start.html
@@ -35,7 +35,7 @@
 						<div class="error_content">Willkommen im JRMDS Huhu User01</div>
 					</div>
 
-					<form th:action="@{/addPerson}" th:object="${person}" method="post">
+					<form th:action="@{addPerson}" th:object="${person}" method="post">
 						<table>
 							<tr>
 								<td>Firstame:</td>
