--- a/origin-rest-neo4j-prototype2/src/main/resources/templates/usermanagement.html
+++ b/origin-rest-neo4j-prototype2/src/main/resources/templates/usermanagement.html
@@ -35,8 +35,8 @@
 
 						<form>
 
-							<input type="submit" id="edit_button" value="Edit"> <input type="submit" id="edit_button" value="Edit"> <input
-								type="submit" id="edit_button" value="Edit">
+							<input type="submit" id="edit_button" value="Edit"/> <input type="submit" id="edit_button" value="Edit"/> <input
+								type="submit" id="edit_button" value="Edit"/>
 
 						</form>
 					</div>
