--- a/origin-rest-neo4j-prototype2/src/main/resources/templates/editRule.html
+++ b/origin-rest-neo4j-prototype2/src/main/resources/templates/editRule.html
@@ -29,11 +29,11 @@
 						<table style="width: 95%">
 							<tr>
 								<td><span>ID:</span></td>
-								<td><input type="text" size="60"></td>
+								<td><input type="text" size="60"/></td>
 							</tr>
 							<tr>
 								<td><span>Severity (optional):</span></td>
-								<td><input type="text" size="25"></td>
+								<td><input type="text" size="25"/></td>
 							</tr>
 							<tr>
 								<td><span>Description:</span></td>
@@ -46,7 +46,7 @@
 							<tr>
 								<td><span>QueryTemplate:</span></td>
 								<td><select name="Templates">
-										<option selected>none</option>
+										<option>none</option>
 										<option>modules:Template1</option>
 										<option>modules:Template2</option>
 										<option></option>
@@ -54,10 +54,10 @@
 								</select></td>
 							</tr>
 						</table>
-						<br>
-						<br>
+						
+						
 					</form>
-					<strong>Parameters:</strong><br>
+					<strong>Parameters:</strong>
 					<table style="width: 75%">
 						<tr>
 							<td>#</td>
@@ -68,73 +68,69 @@
 						</tr>
 						<tr>
 							<td>1</td>
-							<td><input type="checkbox"></td>
-							<td><input type="text" size="40"></td>
-							<td><input type="text" size="40"></td>
-							<td><input type="checkbox"></td>
+							<td><input type="checkbox"/></td>
+							<td><input type="text" size="40"/></td>
+							<td><input type="text" size="40"/></td>
+							<td><input type="checkbox"/></td>
 						</tr>
 						<tr>
 							<td>2</td>
-							<td><input type="checkbox"></td>
-							<td><input type="text" size="40"></td>
-							<td><input type="text" size="40"></td>
-							<td><input type="checkbox"></td>
+							<td><input type="checkbox"/></td>
+							<td><input type="text" size="40"/></td>
+							<td><input type="text" size="40"/></td>
+							<td><input type="checkbox"/></td>
 						</tr>
 						<tr>
-							<td colspan="4"><input type="submit" value="Add Paramter"></td>
-							<td><form action="./confirmParameterDelete.html">
-									<input type="Submit" value="delete">
-								</form></td>
+							<td colspan="4"><input type="submit" value="Add Paramter"/></td>
+							<td>
+									<input type="Submit" value="delete"/>
+								</td>
 						</tr>
 					</table>
-					<br>
-					<br>
-					<br> <strong>References:</strong><br>
-					<br> <span>Depends on:</span>
+					
+					
+					 <strong>References:</strong>
+					 <span>Depends on:</span>
 					<table style="width: 75%">
 						<tr>
 							<td>1</td>
-							<td><a href="./editRule1.html">Concept xy</a></td>
-							<td><input type="checkbox"></td>
+							<td><a th:href="@{editRule1}">Concept xy</a></td>
+							<td><input type="checkbox"/></td>
 						</tr>
 						<tr>
 							<td>2</td>
-							<td><a href="./editRule1.html">another Concept</a></td>
-							<td><input type="checkbox"></td>
+							<td><a th:href="@{editRule1}">another Concept</a></td>
+							<td><input type="checkbox"/></td>
 						</tr>
 						<tr>
 							<td></td>
 							<td></td>
 							<td><form action="./confirmRefDelete.html">
-									<input type="Submit" value="delete">
+									<input type="Submit" value="delete"/>
 								</form></td>
 						</tr>
 						<tr>
 							<td></td>
 							<td><form action="./errorRefAdd.html">
-									<input type="text" size="50"><input type="Submit" value="Add">
+									<input type="text" size="50"/><input type="Submit" value="Add"/>
 								</form></td>
 							<td></td>
 						</tr>
 					</table>
-					<br>
-					<br> <span>Referenced by:</span>
+					
+					 <span>Referenced by:</span>
 					<table style="width: 75%">
 						<tr>
-							<td>1
-							<td><a href="./editGroup.html">SlowCheck</a></td>
+							<td>1</td>
+							<td><a th:href="@{editGroup}">SlowCheck</a></td>
 						</tr>
 						<tr>
-							<td>2
-							<td><a href="./editRule1.html">another Concept</a>
-							<td>
+							<td>2</td>
+							<td><a th:href="@{editRule1}">another Concept</a></td>
 						</tr>
 					</table>
 					<p>
-					<form action="./projectOverview.html">
-						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-						Save all changes <input type="submit" value="save"> or discard <input type="submit" value="cancel">
-					</form>
+						Save all changes <input type="submit" value="save"/> or discard <input type="submit" value="cancel"/>
 					</p>
 				</div>
 
