--- a/origin-rest-neo4j-prototype2/src/main/resources/templates/editRule1.html
+++ b/origin-rest-neo4j-prototype2/src/main/resources/templates/editRule1.html
@@ -12,75 +12,124 @@
 
 
 </head>
-	
-	
-	<body>
-		
-		
-		<div id="main">
+
+
+<body>
+
+
+	<div id="main">
 		<div id="header_wrapper" th:replace="fragments/header :: header"></div>
 		<div id="content_wrapper">
-		
+
 			<div class="container">
 				<div class="container_heading">something:xy (Concept)</div>
-				
+
 				<div class="actual_content">
 					<form id="EditWindow">
-					<table style="width:95%"><tr>
-						<td><span>ID:</span></td><td><input type="text" size="60"></td>
-					</tr><tr>
-						<td><span>Severity (optional):</span></td><td><input type="text" size="25"></td>
-					</tr><tr>
-						<td><span>Description:</span></td><td><textarea rows="2" cols="60"></textarea></td>
-					</tr><tr>
-						<td><span>Cypher:</span></td><td><textarea rows="4" cols="60"></textarea></td>
-					</tr><tr>
-						<td><span>QueryTemplate:</span></td><td><select name="Templates">
-							<option selected>none</option>
-							<option>modules:Template1</option>
-							<option>modules:Template2</option>
-							<option> </option>
-							<option> </option>
-						</select></td>
-					</tr></table><br><br>
-					</form><strong>Parameters:</strong><br>
-					<table style="width:75%"><tr>
-						<td>#</td><td>Integer?</td><td>Name</td><td>Value</td><td>&nbsp;</td>
-					</tr><tr>
-						<td>1</td><td><input type="checkbox"></td><td><input type="text" size="40"></td><td><input type="text" size="40"></td><td><input type="checkbox"></td>
-					</tr><tr>
-						<td>2</td><td><input type="checkbox"></td><td><input type="text" size="40"></td><td><input type="text" size="40"></td><td><input type="checkbox"></td>
-					</tr><tr>
-						<td colspan="4"><input type="submit" value="Add Paramter"></td><td><form action="./confirmParameterDelete.html"><input type="Submit" value="delete"></form></td>
-					</tr></table>
-					<br><br><br>
-					<strong>References:</strong><br><br>
-					<span>Depends on:</span>
-					<table style="width:75%"><tr>
-						<td>1</td><td><a href="./editRule.html">Concept zx</a></td><td><input type="checkbox"></td>
-					</tr><tr>
-						<td> </td><td> </td><td><form action="./confirmRefDelete.html"><input type="Submit" value="delete"></form></td>
-					</tr><tr>
-						<td> </td><td><form action="./errorRefAdd.html"><input type="text" size="50"><input type="Submit" value="Add"></form></td><td></td>
-					</tr></table>
-					<br><br>
+						<table style="width: 95%">
+							<tr>
+								<td><span>ID:</span></td>
+								<td><input type="text" size="60" /></td>
+							</tr>
+							<tr>
+								<td><span>Severity (optional):</span></td>
+								<td><input type="text" size="25" /></td>
+							</tr>
+							<tr>
+								<td><span>Description:</span></td>
+								<td><textarea rows="2" cols="60"></textarea></td>
+							</tr>
+							<tr>
+								<td><span>Cypher:</span></td>
+								<td><textarea rows="4" cols="60"></textarea></td>
+							</tr>
+							<tr>
+								<td><span>QueryTemplate:</span></td>
+								<td><select name="Templates">
+										<option>none</option>
+										<option>modules:Template1</option>
+										<option>modules:Template2</option>
+										<option></option>
+										<option></option>
+								</select></td>
+							</tr>
+						</table>
+
+
+					</form>
+					<strong>Parameters:</strong>
+					<table style="width: 75%">
+						<tr>
+							<td>#</td>
+							<td>Integer?</td>
+							<td>Name</td>
+							<td>Value</td>
+							<td>&nbsp;</td>
+						</tr>
+						<tr>
+							<td>1</td>
+							<td><input type="checkbox" /></td>
+							<td><input type="text" size="40" /></td>
+							<td><input type="text" size="40" /></td>
+							<td><input type="checkbox" /></td>
+						</tr>
+						<tr>
+							<td>2</td>
+							<td><input type="checkbox" /></td>
+							<td><input type="text" size="40" /></td>
+							<td><input type="text" size="40" /></td>
+							<td><input type="checkbox" /></td>
+						</tr>
+						<tr>
+							<td colspan="4"><input type="submit" value="Add Paramter" /></td>
+							<td><form action="confirmParameterDelete.html">
+									<input type="Submit" value="delete" />
+								</form></td>
+						</tr>
+					</table>
+
+
+					<strong>References:</strong> <span>Depends on:</span>
+					<table style="width: 75%">
+						<tr>
+							<td>1</td>
+							<td><a href="editRule.html">Concept zx</a></td>
+							<td><input type="checkbox" /></td>
+						</tr>
+						<tr>
+							<td></td>
+							<td></td>
+							<td><form action="confirmRefDelete.html">
+									<input type="Submit" value="delete" />
+								</form></td>
+						</tr>
+						<tr>
+							<td></td>
+							<td><form action="errorRefAdd.html">
+									<input type="text" size="50" /><input type="Submit" value="Add" />
+								</form></td>
+							<td></td>
+						</tr>
+					</table>
+
 					<span>Referenced by:</span>
-					<p><form action="./confirmRuleDel.html">Element not referenced. Click to delete: <input type="Submit" value="Delete this"></form></p>
-					<p><form action="./projectOverview.html">
-					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-					Save all changes <input type="submit" value="save"> or discard <input type="submit" value="cancel"></form></p>
+					<form action="confirmRuleDel.html">
+						Element not referenced. Click to delete: <input type="Submit" value="Delete this" />
+					</form>
+					<form action="projectOverview.html">
+						Save all changes <input type="submit" value="save" /> or discard <input type="submit" value="cancel" />
+					</form>
 				</div>
 
 			</div>
-		
+
 		</div>
-		
-		<div id="footer">
-		</div>
-		</div>
-		
-		
-		
-	</body>
-	
-	</html>
+
+		<div id="footer"></div>
+	</div>
+
+
+
+</body>
+
+</html>
