--- a/origin-rest-neo4j-prototype2/src/main/resources/templates/projectOverview.html
+++ b/origin-rest-neo4j-prototype2/src/main/resources/templates/projectOverview.html
@@ -15,74 +15,35 @@
 
 
 <body>
-
-	<script type="text/javascript">
-		jQuery(document).ready(function() {
-			$("#menu_group").click(function() {
-				$("#tab1").toggle("fast");
-				$(this).toggleClass("active");
-			});
-			$("#menu_concept").click(function() {
-				$("#tab2").toggle("fast");
-				$(this).toggleClass("active");
-			});
-			$("#menu_contraint").click(function() {
-				$("#tab3").toggle("fast");
-				$(this).toggleClass("active");
-			});
-			$("#menu_template").click(function() {
-				$("#tab4").toggle("fast");
-				$(this).toggleClass("active");
-			});
-		});
-	</script>
+	<script type="text/javascript" th:src="@{/js/projectOverview.js}"></script>
 	<div id="main">
-		<div id="header_wrapper">
-			<div id="header">
-				<a href="index.html"><img id="header_logo" src="../img/logo.png" alt="logo" /></a>
-
-				<form id="search" action="./searchResults.html">
-					<input id="search_input" type="text" value="Search in Project001"
-						onfocus="(this.value == 'Search in Project 001') && (this.value = ''); this.style.color='black';"
-						onblur="(this.value == '') && (this.value = 'Search in Project001'); this.style.color='#d6d6d6';" /> <input type="submit"
-						id="search_button" value=""> <select name="searchoption">
-						<option selected>alle</option>
-						<option>Gruppe</option>
-						<option>Constrain</option>
-						<option>Concept</option>
-						<option>Template</option>
-					</select>
-				</form>
-
-				<div id="welcome_user">
-					<a href="./projects.html"><img src="../img/projects.png" alt="Projekte" class="symbol_small" />Projekte</a> <a
-						href="./usermanagement.html"><img src="../img/user.png" alt="Projekte" class="symbol_small" />swt14w01</a> <a href="./index.html"><img
-						src="../img/log_out.png" alt="LogOut" class="symbol_small" /></a>
-				</div>
-
-				<div style="clear: both;"></div>
-
-			</div>
-		</div>
+		<div id="header_wrapper" th:replace="fragments/header :: header"></div>
 		<div id="content_wrapper">
 
 			<div class="container">
 				<div class="container_heading">
-					<a href="./projectProps.html" class="project_name"><img src="../img/projects.png" alt="Projekte" class="symbol_small"><span
-						class="project_title">Projekt001</span></a> / Übersicht
+					<a th:href="@{projectProps}" class="project_name">
+						<img th:src="@{/img/projects.png}" alt="Projekte" class="symbol_small"/>
+						<span class="project_title">Projekt001 </span>
+					</a> / Übersicht
 				</div>
 
 				<div class="actual_content">
 
 					<div class="tabs">
 						<ul class="tab-links">
-							<li id="menu_group" class="active"><a href="#"> <img class="symbol_small" src="../img/group.png" alt="Groups">Groups<span
-									class="bold_attribute">(3)</span></a></li>
-							<li id="menu_concept"><a href="#"><img class="symbol_small" src="../img/concept.png" alt="Groups">Concepts <span
+							<li id="menu_group" class="active">
+							<a href="#"> 
+								<img class="symbol_small" th:src="@{/img/group.png}" alt="Groups"/>
+								Groups
+								<span class="bold_attribute">(3)</span>
+							  </a>
+							</li>
+							<li id="menu_concept"><a href="#"><img class="symbol_small" th:src="@{/img/concept.png}" alt="Groups"/>Concepts <span
 									class="bold_attribute">(25)</span> </a></li>
-							<li id="menu_contraint"><a href="#"><img class="symbol_small" src="../img/constraint.png" alt="Groups">Constraints <span
+							<li id="menu_contraint"><a href="#"><img class="symbol_small" th:src="@{img/constraint.png}" alt="Groups"/>Constraints <span
 									class="bold_attribute">(12) </span></a></li>
-							<li id="menu_template"><a href="#"><img class="symbol_small" src="../img/template.png" alt="Groups">Templates <span
+							<li id="menu_template"><a href="#"><img class="symbol_small" th:src="@{img/template.png}" alt="Groups"/>Templates <span
 									class="bold_attribute">(7) </span></a></li>
 							<li><a href="#tab4"> <a href="#" class="tag">java</a> <a href="#" class="tag">test</a> <a href="#" class="tag">hallo</a> <a
 									href="#" class="tag">tag4</a> <a href="#" class="tag">java</a> <a href="#" class="tag">test</a> <a href="#" class="tag">hallo</a> <a
@@ -124,7 +85,7 @@
 									</li>
 									<li>
 										<ul class="result_item">
-											<li class="item_name"><a href="editGroup.html"> <img class="symbol_small" src="../img/group.png" alt="Groups">
+											<li class="item_name"><a href="editGroup.html"> <img class="symbol_small" th:src="@{img/group.png}" alt="Groups"/>
 													Gruppe 1<span class="bold_attribute">(90)</span>
 											</a></li>
 											<li class="item_tags"><a href="#" class="tag">java</a> <a href="#" class="tag">test</a> <a href="#" class="tag">hallo</a> <a
@@ -135,7 +96,7 @@
 									</li>
 									<li>
 										<ul class="result_item">
-											<li class="item_name"><a href="editGroup1.html"> <img class="symbol_small" src="../img/group.png" alt="Groups">
+											<li class="item_name"><a href="editGroup1.html"> <img class="symbol_small" th:src="@{img/group.png}" alt="Groups"/>
 													Gruppe 2<span class="bold_attribute">(44)</span>
 											</a></li>
 											<li class="item_tags"><a href="#" class="tag">java</a> <a href="#" class="tag">test</a> <a href="#" class="tag">hallo</a> <a
@@ -146,7 +107,7 @@
 									</li>
 									<li>
 										<ul class="result_item">
-											<li class="item_name"><a href="editGroup.html"> <img class="symbol_small" src="../img/group.png" alt="Groups">Gruppe
+											<li class="item_name"><a href="editGroup.html"> <img class="symbol_small" th:src="@{img/group.png}" alt="Groups"/>Gruppe
 													3<span class="bold_attribute">(17)</span>
 											</a></li>
 											<li class="item_tags"><a href="#" class="tag">java</a> <a href="#" class="tag">json</a> <a href="#" class="tag">jstl</a> <a
@@ -172,7 +133,7 @@
 									</li>
 									<li>
 										<ul class="result_item">
-											<li class="item_name"><a href="editRule.html"> <img class="symbol_small" src="../img/concept.png" alt="Groups">
+											<li class="item_name"><a href="editRule.html"> <img class="symbol_small" th:src="@{img/concept.png}" alt="Groups"/>
 													Concept 1<span class="bold_attribute">(90)</span>
 											</a></li>
 											<li class="item_tags"><a href="#" class="tag">java</a> <a href="#" class="tag">test</a> <a href="#" class="tag">hallo</a> <a
@@ -183,7 +144,7 @@
 									</li>
 									<li>
 										<ul class="result_item">
-											<li class="item_name"><a href="editRule1.html"> <img class="symbol_small" src="../img/concept.png" alt="Groups">
+											<li class="item_name"><a href="editRule1.html"> <img class="symbol_small" th:src="@{img/concept.png}" alt="Groups"/>
 													Concept 2<span class="bold_attribute">(44)</span>
 											</a></li>
 											<li class="item_tags"><a href="#" class="tag">java</a> <a href="#" class="tag">test</a> <a href="#" class="tag">hallo</a> <a
@@ -194,7 +155,7 @@
 									</li>
 									<li>
 										<ul class="result_item">
-											<li class="item_name"><a href="editRule.html"> <img class="symbol_small" src="../img/concept.png" alt="Groups">Concept
+											<li class="item_name"><a href="editRule.html"> <img class="symbol_small" th:src="@{img/concept.png}" alt="Groups"/>Concept
 													3<span class="bold_attribute">(17)</span>
 											</a></li>
 											<li class="item_tags"><a href="#" class="tag">java</a> <a href="#" class="tag">json</a> <a href="#" class="tag">jstl</a> <a
@@ -219,7 +180,7 @@
 									</li>
 									<li>
 										<ul class="result_item">
-											<li class="item_name"><a href="editRule.html"> <img class="symbol_small" src="../img/constraint.png" alt="Groups">
+											<li class="item_name"><a href="editRule.html"> <img class="symbol_small" th:src="@{img/constraint.png}" alt="Groups"/>
 													Constrain 1<span class="bold_attribute">(90)</span>
 											</a></li>
 											<li class="item_tags"><a href="#" class="tag">java</a> <a href="#" class="tag">test</a> <a href="#" class="tag">hallo</a> <a
@@ -230,7 +191,7 @@
 									</li>
 									<li>
 										<ul class="result_item">
-											<li class="item_name"><a href="editRule.html"> <img class="symbol_small" src="../img/constraint.png" alt="Groups">
+											<li class="item_name"><a href="editRule.html"> <img class="symbol_small" th:src="@{img/constraint.png}" alt="Groups"/>
 													Constrain 2<span class="bold_attribute">(44)</span>
 											</a></li>
 											<li class="item_tags"><a href="#" class="tag">java</a> <a href="#" class="tag">test</a> <a href="#" class="tag">hallo</a> <a
@@ -241,7 +202,7 @@
 									</li>
 									<li>
 										<ul class="result_item">
-											<li class="item_name"><a href="editRule.html"> <img class="symbol_small" src="../img/constraint.png" alt="Groups">Constrain
+											<li class="item_name"><a href="editRule.html"> <img class="symbol_small" th:src="@{img/constraint.png}" alt="Groups"/>Constrain
 													3<span class="bold_attribute">(17)</span>
 											</a></li>
 											<li class="item_tags"><a href="#" class="tag">java</a> <a href="#" class="tag">json</a> <a href="#" class="tag">jstl</a> <a
@@ -266,7 +227,7 @@
 									</li>
 									<li>
 										<ul class="result_item">
-											<li class="item_name"><a href="editTemplate.html"> <img class="symbol_small" src="../img/template.png" alt="Groups">
+											<li class="item_name"><a href="editTemplate.html"> <img class="symbol_small" th:src="@{img/template.png}" alt="Groups"/>
 													Template 1<span class="bold_attribute">(90)</span>
 											</a></li>
 											<li class="item_tags"><a href="#" class="tag">java</a> <a href="#" class="tag">test</a> <a href="#" class="tag">hallo</a> <a
@@ -277,7 +238,7 @@
 									</li>
 									<li>
 										<ul class="result_item">
-											<li class="item_name"><a href="editTemplate.html"> <img class="symbol_small" src="../img/template.png" alt="Groups">
+											<li class="item_name"><a href="editTemplate.html"> <img class="symbol_small" th:src="@{img/template.png}" alt="Groups"/>
 													Template 2<span class="bold_attribute">(44)</span>
 											</a></li>
 											<li class="item_tags"><a href="#" class="tag">java</a> <a href="#" class="tag">test</a> <a href="#" class="tag">hallo</a> <a
@@ -288,7 +249,7 @@
 									</li>
 									<li>
 										<ul class="result_item">
-											<li class="item_name"><a href="editTemplate.html"> <img class="symbol_small" src="../img/template.png" alt="Groups">Template
+											<li class="item_name"><a href="editTemplate.html"> <img class="symbol_small" th:src="@{img/template.png}" alt="Groups"/>Template
 													3<span class="bold_attribute">(17)</span>
 											</a></li>
 											<li class="item_tags"><a href="#" class="tag">java</a> <a href="#" class="tag">json</a> <a href="#" class="tag">jstl</a> <a
