--- a/origin-rest-neo4j-prototype2/src/main/resources/templates/searchResults.html
+++ b/origin-rest-neo4j-prototype2/src/main/resources/templates/searchResults.html
@@ -15,47 +15,28 @@
 
 
 <body>
+	<script type="text/javascript" th:src="@{/js/projectOverview.js}"></script>
 
-	<script type="text/javascript">
-		jQuery(document).ready(function() {
-			$("#menu_group").click(function(){
-			$("#tab1").toggle("fast");
-			$(this).toggleClass("active");
-			});
-			$("#menu_concept").click(function(){
-			$("#tab2").toggle("fast");
-			$(this).toggleClass("active");
-			});
-			$("#menu_contraint").click(function(){
-			$("#tab3").toggle("fast");
-			$(this).toggleClass("active");
-			});
-			$("#menu_template").click(function(){
-			$("#tab4").toggle("fast");
-			$(this).toggleClass("active");
-			});
-		});
-		</script>
 	<div id="main">
 		<div id="header_wrapper" th:replace="fragments/header :: header"></div>
 		<div id="content_wrapper">
 
 			<div class="container">
 				<div class="container_heading">
-					<img src="../img/projects.png" alt="Projekte" class="symbol_small"><span class="project_title">Suchresultate</span>
+					<img th:src="@{/img/projects.png}" alt="Projekte" class="symbol_small"/><span class="project_title">Suchresultate</span>
 				</div>
 
 				<div class="actual_content">
 
 					<div class="tabs">
 						<ul class="tab-links">
-							<li id="menu_group" class="active"><a href="#"> <img class="symbol_small" src="../img/group.png" alt="Groups">Groups<span
+							<li id="menu_group" class="active"><a href="#"> <img class="symbol_small" th:src="@{/img/group.png}" alt="Groups"/>Groups<span
 									class="bold_attribute">(3)</span></a></li>
-							<li id="menu_concept"><a href="#"><img class="symbol_small" src="../img/concept.png" alt="Groups">Concepts <span
+							<li id="menu_concept"><a href="#"><img class="symbol_small" th:src="@{/img/concept.png}" alt="Groups"/>Concepts <span
 									class="bold_attribute">(25)</span> </a></li>
-							<li id="menu_contraint"><a href="#"><img class="symbol_small" src="../img/constraint.png" alt="Groups">Constraints <span
+							<li id="menu_contraint"><a href="#"><img class="symbol_small" th:src="@{/img/constraint.png}" alt="Groups"/>Constraints <span
 									class="bold_attribute">(12) </span></a></li>
-							<li id="menu_template"><a href="#"><img class="symbol_small" src="../img/template.png" alt="Groups">Templates <span
+							<li id="menu_template"><a href="#"><img class="symbol_small" th:src="@{/img/template.png}" alt="Groups"/>Templates <span
 									class="bold_attribute">(7) </span></a></li>
 						</ul>
 
@@ -71,7 +52,7 @@
 									</li>
 									<li>
 										<ul class="result_item">
-											<li class="item_name"><a href="editGroup.html"> <img class="symbol_small" src="../img/group.png" alt="Groups">
+											<li class="item_name"><a href="editGroup.html"> <img class="symbol_small" th:src="@{/img/group.png}" alt="Groups"/>
 													Gruppe 1<span class="bold_attribute">(90)</span>
 											</a></li>
 											<li class="item_tags"><a href="#" class="tag">java</a> <a href="#" class="tag">test</a> <a href="#" class="tag">hallo</a> <a
@@ -82,7 +63,7 @@
 									</li>
 									<li>
 										<ul class="result_item">
-											<li class="item_name"><a href="editGroup1.html"> <img class="symbol_small" src="../img/group.png" alt="Groups">
+											<li class="item_name"><a href="editGroup1.html"> <img class="symbol_small" th:src="@{/img/group.png}" alt="Groups"/>
 													Gruppe 2<span class="bold_attribute">(44)</span>
 											</a></li>
 											<li class="item_tags"><a href="#" class="tag">java</a> <a href="#" class="tag">test</a> <a href="#" class="tag">hallo</a> <a
@@ -93,7 +74,7 @@
 									</li>
 									<li>
 										<ul class="result_item">
-											<li class="item_name"><a href="editGroup.html"> <img class="symbol_small" src="../img/group.png" alt="Groups">Gruppe
+											<li class="item_name"><a href="editGroup.html"> <img class="symbol_small" th:src="@{/img/group.png}" alt="Groups"/>Gruppe
 													3<span class="bold_attribute">(17)</span>
 											</a></li>
 											<li class="item_tags"><a href="#" class="tag">java</a> <a href="#" class="tag">json</a> <a href="#" class="tag">jstl</a> <a
@@ -119,7 +100,7 @@
 									</li>
 									<li>
 										<ul class="result_item">
-											<li class="item_name"><a href="editRule.html"> <img class="symbol_small" src="../img/concept.png" alt="Groups">
+											<li class="item_name"><a href="editRule.html"> <img class="symbol_small" th:src="@{/img/concept.png}" alt="Groups"/>
 													Concept 1<span class="bold_attribute">(90)</span>
 											</a></li>
 											<li class="item_tags"><a href="#" class="tag">java</a> <a href="#" class="tag">test</a> <a href="#" class="tag">hallo</a> <a
@@ -130,7 +111,7 @@
 									</li>
 									<li>
 										<ul class="result_item">
-											<li class="item_name"><a href="editRule1.html"> <img class="symbol_small" src="../img/concept.png" alt="Groups">
+											<li class="item_name"><a href="editRule1.html"> <img class="symbol_small" th:src="@{/img/concept.png}" alt="Groups"/>
 													Concept 2<span class="bold_attribute">(44)</span>
 											</a></li>
 											<li class="item_tags"><a href="#" class="tag">java</a> <a href="#" class="tag">test</a> <a href="#" class="tag">hallo</a> <a
@@ -141,7 +122,7 @@
 									</li>
 									<li>
 										<ul class="result_item">
-											<li class="item_name"><a href="editRule.html"> <img class="symbol_small" src="../img/concept.png" alt="Groups">Concept
+											<li class="item_name"><a href="editRule.html"> <img class="symbol_small" th:src="@{/img/concept.png}" alt="Groups"/>Concept
 													3<span class="bold_attribute">(17)</span>
 											</a></li>
 											<li class="item_tags"><a href="#" class="tag">java</a> <a href="#" class="tag">json</a> <a href="#" class="tag">jstl</a> <a
@@ -166,7 +147,7 @@
 									</li>
 									<li>
 										<ul class="result_item">
-											<li class="item_name"><a href="editRule.html"> <img class="symbol_small" src="../img/constraint.png" alt="Groups">
+											<li class="item_name"><a href="editRule.html"> <img class="symbol_small" th:src="@{/img/constraint.png}" alt="Groups"/>
 													Constrain 1<span class="bold_attribute">(90)</span>
 											</a></li>
 											<li class="item_tags"><a href="#" class="tag">java</a> <a href="#" class="tag">test</a> <a href="#" class="tag">hallo</a> <a
@@ -177,7 +158,7 @@
 									</li>
 									<li>
 										<ul class="result_item">
-											<li class="item_name"><a href="editRule.html"> <img class="symbol_small" src="../img/constraint.png" alt="Groups">
+											<li class="item_name"><a href="editRule.html"> <img class="symbol_small" th:src="@{/img/constraint.png}" alt="Groups"/>
 													Constrain 2<span class="bold_attribute">(44)</span>
 											</a></li>
 											<li class="item_tags"><a href="#" class="tag">java</a> <a href="#" class="tag">test</a> <a href="#" class="tag">hallo</a> <a
@@ -188,7 +169,7 @@
 									</li>
 									<li>
 										<ul class="result_item">
-											<li class="item_name"><a href="editRule.html"> <img class="symbol_small" src="../img/constraint.png" alt="Groups">Constrain
+											<li class="item_name"><a href="editRule.html"> <img class="symbol_small" th:src="@{/img/constraint.png}" alt="Groups"/>Constrain
 													3<span class="bold_attribute">(17)</span>
 											</a></li>
 											<li class="item_tags"><a href="#" class="tag">java</a> <a href="#" class="tag">json</a> <a href="#" class="tag">jstl</a> <a
@@ -213,7 +194,7 @@
 									</li>
 									<li>
 										<ul class="result_item">
-											<li class="item_name"><a href="editTemplate.html"> <img class="symbol_small" src="../img/template.png" alt="Groups">
+											<li class="item_name"><a href="editTemplate.html"> <img class="symbol_small" th:src="@{/img/template.png}" alt="Groups"/>
 													Template 1<span class="bold_attribute">(90)</span>
 											</a></li>
 											<li class="item_tags"><a href="#" class="tag">java</a> <a href="#" class="tag">test</a> <a href="#" class="tag">hallo</a> <a
@@ -224,7 +205,7 @@
 									</li>
 									<li>
 										<ul class="result_item">
-											<li class="item_name"><a href="editTemplate.html"> <img class="symbol_small" src="../img/template.png" alt="Groups">
+											<li class="item_name"><a href="editTemplate.html"> <img class="symbol_small" th:src="@{/img/template.png}" alt="Groups"/>
 													Template 2<span class="bold_attribute">(44)</span>
 											</a></li>
 											<li class="item_tags"><a href="#" class="tag">java</a> <a href="#" class="tag">test</a> <a href="#" class="tag">hallo</a> <a
@@ -235,7 +216,7 @@
 									</li>
 									<li>
 										<ul class="result_item">
-											<li class="item_name"><a href="editTemplate.html"> <img class="symbol_small" src="../img/template.png" alt="Groups">Template
+											<li class="item_name"><a href="editTemplate.html"> <img class="symbol_small" th:src="@{/img/template.png}" alt="Groups"/>Template
 													3<span class="bold_attribute">(17)</span>
 											</a></li>
 											<li class="item_tags"><a href="#" class="tag">java</a> <a href="#" class="tag">json</a> <a href="#" class="tag">jstl</a> <a
