--- a/origin-rest-neo4j-prototype2/src/main/resources/templates/fragments/header.html
+++ b/origin-rest-neo4j-prototype2/src/main/resources/templates/fragments/header.html
@@ -24,7 +24,7 @@
 			</form>
 
 			<div id="welcome_user">
-				<a th:href="@{hello}"><img th:src="@{/img/projects.png}" alt="Projekte" class="symbol_small" />Projekte</a> <a th:href="@{hello}"><img
+				<a th:href="@{projectOverview}"><img th:src="@{/img/projects.png}" alt="Projekte" class="symbol_small" />Projekte</a> <a th:href="@{hello}"><img
 					th:src="@{/img/user.png}" alt="Projekte" class="symbol_small" />Login</a> <a th:href="@{hello}"><img th:src="@{/img/user.png}"
 					alt="Projekte" class="symbol_small" />Register</a>
 			</div>
